--- a/index.html
+++ b/index.html
@@ -20,6 +20,40 @@
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
+    <!-- ===== HEADER SECTION ===== -->
+    <header class="header" id="header">
+      <div class="header__container container">
+        <a href="#" class="header__logo">Besnik.</a>
+
+        <div class="header__menu" id="header-menu">
+          <ul class="header__list">
+            <li class="header__item">
+              <a href="#" class="header__link active-link">Home</a>
+            </li>
+            <li class="header__item">
+              <a href="#" class="header__link">Features</a>
+            </li>
+            <li class="header__item">
+              <a href="#" class="header__link">Service</a>
+            </li>
+            <li class="header__item">
+              <a href="#" class="header__link">Listed</a>
+            </li>
+            <li class="header__item">
+              <a href="#" class="header__link">Contact</a>
+            </li>
+          </ul>
+
+          <a href="#" class="header__button button button-fill">Register</a>
+        </div>
+
+        <div class="header__toggle" id="header-toggle">
+          <i class="bx bx-menu"></i>
+        </div>
+      </div>
+    </header>
+    <!-- ===== HEADER SECTION ===== -->
+
     <!-- ===== MAIN JS ===== -->
     <script src="./js/main.js"></script>
   </body>
