--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
     </header>
     <!-- ===== HEADER SECTION ===== -->
 
+    <main class="main">
+      <!-- ===== HOME SECTION ===== -->
+      <section class="home section">
+        <div class="home__container container grid grid-gap">
+          <div class="home__data">
+            <span class="home__subtitle"> Welcome to Besnik Agency </span>
+            <h1 class="home__title section-title">
+              Discover a place <br />
+              you'll love to live.
+            </h1>
+            <p class="home__text section-text">
+              get the best real estate deals first, before they hit the mass
+              market! HOT FORECLOSURE DEALS with one simple search
+            </p>
+            <a href="#" class="home__button button button-fill"
+              >More About Us</a
+            >
+          </div>
+
+          <img src="./img/home-img.png" alt="" class="home__img" />
+        </div>
+      </section>
+      <!-- ===== HOME SECTION ===== -->
+    </main>
+
     <!-- ===== MAIN JS ===== -->
     <script src="./js/main.js"></script>
   </body>
