--- a/index.html
+++ b/index.html
@@ -77,6 +77,57 @@
         </div>
       </section>
       <!-- ===== HOME SECTION ===== -->
+
+      <!-- ===== PARTNER SECTION ===== -->
+      <section class="partner section">
+        <div class="partner__container container grid grid-gap">
+          <div class="partner__data">
+            <h1 class="partner__title section-title">Besnik.</h1>
+            <p class="partner__text section-text">
+              More than 45,000+ companies trust besnik
+            </p>
+          </div>
+
+          <div class="partner__group grid grid-gap">
+            <div class="partner__box">
+              <img
+                src="./img/partner-img- (1).png"
+                alt=""
+                class="partner__img"
+              />
+            </div>
+            <div class="partner__box">
+              <img
+                src="./img/partner-img- (2).png"
+                alt=""
+                class="partner__img"
+              />
+            </div>
+            <div class="partner__box">
+              <img
+                src="./img/partner-img- (3).png"
+                alt=""
+                class="partner__img"
+              />
+            </div>
+            <div class="partner__box">
+              <img
+                src="./img/partner-img- (4).png"
+                alt=""
+                class="partner__img"
+              />
+            </div>
+            <div class="partner__box">
+              <img
+                src="./img/partner-img- (5).png"
+                alt=""
+                class="partner__img"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ===== PARTNER SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
