--- a/index.html
+++ b/index.html
@@ -128,6 +128,65 @@
         </div>
       </section>
       <!-- ===== PARTNER SECTION ===== -->
+
+      <!-- ===== WORK SECTION ===== -->
+      <section class="work section">
+        <div class="work__container container grid grid-gap">
+          <div class="work__data">
+            <h1 class="work__title section-title">How its work?</h1>
+            <p class="work__text section-text">
+              Everything you need to know when you're looking to buy, rent, or
+              sell - all in one place.
+            </p>
+          </div>
+
+          <div class="work__group">
+            <div class="work__content">
+              <img
+                src="./img/work-icon- (1).svg"
+                alt=""
+                class="work__content-icon"
+              />
+              <h3 class="work__content-title">Buyer Guides</h3>
+              <a href="#" class="work__content-button button button-link">
+                How to buy
+                <i class="bx bx-right-arrow-alt button-icon"></i>
+              </a>
+            </div>
+
+            <div class="work__content">
+              <img
+                src="./img/work-icon- (2).svg"
+                alt=""
+                class="work__content-icon"
+              />
+              <h3 class="work__content-title">Renter Guides</h3>
+              <a href="#" class="work__content-button button button-link">
+                How to buy
+                <i class="bx bx-right-arrow-alt button-icon"></i>
+              </a>
+            </div>
+
+            <div class="work__content">
+              <img
+                src="./img/work-icon- (3).svg"
+                alt=""
+                class="work__content-icon"
+              />
+              <h3 class="work__content-title">Seller Guides</h3>
+              <a href="#" class="work__content-button button button-link">
+                How to buy
+                <i class="bx bx-right-arrow-alt button-icon"></i>
+              </a>
+            </div>
+          </div>
+
+          <a href="#" class="work__button button button-fill"
+            >Sell Full Guidelines</a
+          >
+        </div>
+      </section>
+      <!-- ===== WORK SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
