--- a/index.html
+++ b/index.html
@@ -187,6 +187,120 @@
         </div>
       </section>
       <!-- ===== WORK SECTION ===== -->
+
+      <!-- ===== FEATURE SECTION ===== -->
+      <section class="feature section">
+        <div class="feature__bg">
+          <div class="feature__container container grid grid-gap">
+            <div class="feature__data">
+              <h1 class="feature__title section-title">Featured Properties</h1>
+              <p class="feature__text section-text">
+                Everything you need to know when you're looking
+              </p>
+            </div>
+
+            <div class="feature__group">
+              <div class="feature__content">
+                <div class="feature__content-box">
+                  <img
+                    src="./img/properties-img- (1).png"
+                    alt=""
+                    class="feature__content-img"
+                  />
+                </div>
+
+                <div class="feature__content-data">
+                  <div>
+                    <h3 class="feature__content-title">$35000</h3>
+                    <p class="feature__content-text">
+                      8502 Preston Rd. Inglewood, Maine 98280
+                    </p>
+                  </div>
+
+                  <div class="feature__content-info">
+                    <div class="feature__content-wrapper">
+                      <i class="bx bx-bed feature__content-icon"></i>
+                      <span class="feature__content-span">5 Beds</span>
+                    </div>
+
+                    <div class="feature__content-wrapper">
+                      <i class="bx bx-shape-square feature__content-icon"></i>
+                      <span class="feature__content-span">5000 Sqft</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feature__content">
+                <div class="feature__content-box">
+                  <img
+                    src="./img/properties-img- (2).png"
+                    alt=""
+                    class="feature__content-img"
+                  />
+                </div>
+
+                <div class="feature__content-data">
+                  <div>
+                    <h3 class="feature__content-title">$35000</h3>
+                    <p class="feature__content-text">
+                      8502 Preston Rd. Inglewood, Maine 98280
+                    </p>
+                  </div>
+
+                  <div class="feature__content-info">
+                    <div class="feature__content-wrapper">
+                      <i class="bx bx-bed feature__content-icon"></i>
+                      <span class="feature__content-span">5 Beds</span>
+                    </div>
+
+                    <div class="feature__content-wrapper">
+                      <i class="bx bx-shape-square feature__content-icon"></i>
+                      <span class="feature__content-span">5000 Sqft</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="feature__content">
+                <div class="feature__content-box">
+                  <img
+                    src="./img/properties-img- (3).png"
+                    alt=""
+                    class="feature__content-img"
+                  />
+                </div>
+
+                <div class="feature__content-data">
+                  <div>
+                    <h3 class="feature__content-title">$35000</h3>
+                    <p class="feature__content-text">
+                      8502 Preston Rd. Inglewood, Maine 98280
+                    </p>
+                  </div>
+
+                  <div class="feature__content-info">
+                    <div class="feature__content-wrapper">
+                      <i class="bx bx-bed feature__content-icon"></i>
+                      <span class="feature__content-span">5 Beds</span>
+                    </div>
+
+                    <div class="feature__content-wrapper">
+                      <i class="bx bx-shape-square feature__content-icon"></i>
+                      <span class="feature__content-span">5000 Sqft</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <a href="#" class="feature__button button button-fill"
+              >View All Properties</a
+            >
+          </div>
+        </div>
+      </section>
+      <!-- ===== FEATURE SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
