--- a/index.html
+++ b/index.html
@@ -301,6 +301,28 @@
         </div>
       </section>
       <!-- ===== FEATURE SECTION ===== -->
+
+      <!-- ===== ABOUT SECTION ===== -->
+      <section class="about section">
+        <div class="about__container container grid grid-gap">
+          <div class="about__data">
+            <h1 class="about__title section-title">
+              You've found a neighborhood you love.
+            </h1>
+            <p class="about__text section-text">
+              When you own a home, you're committing to living in one location
+              for a while. In a recent Trulia survey, we found that five out of
+              six respondents said finding the right neighborhood
+            </p>
+            <a href="#" class="about__button button button-fill"
+              >More About Us</a
+            >
+          </div>
+
+          <img src="./img/about-img.png" alt="" class="about__img" />
+        </div>
+      </section>
+      <!-- ===== ABOUT SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
