--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
               you'll love to live.
             </h1>
             <p class="home__text section-text">
-              get the best real estate deals first, before they hit the mass
-              market! HOT FORECLOSURE DEALS with one simple search
+              Get the best real estate deals first, before they hit the mass
+              market! HOT FORECLOSURE DEALS with one simple search.
             </p>
             <a href="#" class="home__button button button-fill"
               >More About Us</a
@@ -351,6 +351,22 @@
         </div>
       </section>
       <!-- ===== STATISTIC SECTION ===== -->
+
+      <!-- ===== CONTACT SECTION ===== -->
+      <section class="contact section">
+        <div class="contact__container container grid grid-gap">
+          <div class="contact__data">
+            <h1 class="contact__title section-title">More Information</h1>
+            <p class="contact__text section-text">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Exercitationem corrupti corporis magnam.
+            </p>
+          </div>
+
+          <a href="#" class="contact__button button button-fill">Contact Us</a>
+        </div>
+      </section>
+      <!-- ===== CONTACT SECTION ===== -->
     </main>
 
     <!-- ===== MAIN JS ===== -->
