--- a/index.html
+++ b/index.html
@@ -440,6 +440,12 @@
     </footer>
     <!-- ===== FOOTER SECTION ===== -->
 
+    <!-- ===== SCROLLUP SECTION ===== -->
+    <a href="#" class="scrollup" id="scroll-up">
+      <i class="bx bx-chevron-up scrollup__icon"></i>
+    </a>
+    <!-- ===== SCROLLUP SECTION ===== -->
+
     <!-- ===== MAIN JS ===== -->
     <script src="./js/main.js"></script>
   </body>
